--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "argon2": "^0.44.0",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "uuid": "^13.0.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
